--- a/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor
@@ -3,7 +3,7 @@
 
 
 <div class="page">
-    <div class="sidebar">
+    <div class="menu-bar">
         <Patient.Api.Client.Layout.PatientMenu />
     </div>
 
