--- a/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterDoctor.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/Registration/RegisterDoctor.razor
@@ -29,16 +29,11 @@
 
 
 
-
-
-
-
 <div class="container">
-    <div class="row justify-content-center pt-5">
-        <h2>Lekarz - rejestracja</h2>
+    <div class="row justify-content-center pt-5">       
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header">Rejestracja</div>
+                <h2 class="card-title text-center mb-4">Rejestracja</h2>
                 <div class="card-body">
                     <form>
                         <div class="form-group">
