--- a/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor.css
+++ b/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor.css
@@ -1,7 +1,17 @@
+body{
+    overflow-x: hidden;
+}
+
 .page {
     position: relative;
     display: flex;
     flex-direction: column;
+    background-image: url('/images/kurp2ClientVersion.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
 }
 
 main {
@@ -9,33 +19,11 @@ main {
     
 }
 
-.sidebar {
-    background-image: linear-gradient(45deg, rgb(0,123,255) 0%, rgb(144, 238, 144)80%);
+.menu-bar{
+    z-index: 500;
 }
 
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
-
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
 
 @media (max-width: 640.98px) {
     .top-row {
@@ -52,30 +40,9 @@ main {
         flex-direction: column;
     }
 
-    .sidebar {
-        width: 100vw;
-        height: 100px;
-        position: sticky;
-        z-index: 1;
-        top: 0;
-    }
+    
 
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
+    
 }
 
 #blazor-error-ui {
