--- a/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/MainViewPages/Registration.razor
@@ -6,16 +6,17 @@
 
 <div class="container">
     <div class="row">
-        <p class="text-center">Dzielny pacjent - w ciaglej opiece</p>
+        <p class="text-center"></p>
     </div>
     <div class="row">
         <h2 class="align-items-center text-center pt-5">Rejestracja</h2>
         <div class="col-6 pt-5 d-flex align-items-center text-center justify-content-center">
-            <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
+            <div class="card shadow-sm" style="width: 100%; max-width: 300px;">
                 <div class="card-body">
                     <h2 class="card-title text-center mb-4">Lekarz</h2>
+                    <img src="/images/icons/doctoricon.jpg" class="card-img">
                     <NavLink href="/rejestracjaLekarz">
-                        <btn type="button" class="btn btn-primary"> Rejestracja</btn>
+                        <btn type="button" class="btn btn-outline-primary btn-sign-up-doctor"> Rejestracja</btn>
                     </NavLink>
                 </div>
             </div>
@@ -23,11 +24,13 @@
 
         </div>
         <div class="col-6 d-flex align-items-center justify-content-center text-center pt-5">
-            <div class="card shadow-sm" style="width: 100%; max-width: 400px;">
-                <div class="card-body" style="background-color:aqua">
+            <div class="card shadow-sm" style="width: 100%; max-width: 300px;">
+                <div class="card-body" >
                     <h2 class="card-title text-center mb-4">Pacjent</h2>
+                    <img src="/images/icons/patientIcon.jpg" class="card-img">
+
                     <NavLink href="/rejestracjaPacjent">
-                        <btn type="button" class="btn btn-primary"> Rejestracja</btn>
+                        <btn type="button" class="btn btn-primary btn-sign-up-patient"> Rejestracja</btn>
                     </NavLink>
                 </div>
             </div>
