--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/ReportPreview.razor
@@ -64,10 +64,10 @@
             </div>
             <div class="col text-center mx-5">
                 <div class="position-relative">
-                    <button class="btn btn-primary mt-5" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <button class="btn btn-primary mt-5" type="button" data-toggle="collapse" data-target="#collapseCard" aria-expanded="false" aria-controls="collapseCard">
                         Popros o konsultacje
                     </button>
-                    <div class="collapse position-relative" id="collapseExample" style="left: 33.5%; width: 70%;">
+                    <div class="collapse position-relative" id="collapseCard" style="left: 33.5%; width: 70%;">
                         <div class="card card-body position-absolute" style="z-index: 1000; transform: translateY(0);">
                             <CascadingValue Value="ReportId">
                                 <AskForConsultationComponent />
