--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor.css
@@ -1,20 +1,4 @@
-﻿.container-dropdown-body {
-    position: absolute;
-    display: block;
-    bottom: 0;
-    left: 0;
-    top: 100%;
-    color: red;
-    background-color: grey;
-    border: 1px solid black;
-    z-index: 1000;
-    border-radius: 4%;
-    border-top-left-radius: 0;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Cień kontenera */
-    max-height: 30%;
-    
-}
-
+﻿
 .custom-mud-list {
     padding-left: 0; 
     padding-right: 0; 
