Added Patients Prescriptions

--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Chats/Chats.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Chats/Chats.razor
@@ -6,6 +6,9 @@
 
 <h3>Chats</h3>
 
-@code {
 
+
+@code {
+    //czaty - maja sie pojawiac czaty z twoimi tylko lekarzami - jesli ktos chce np z innym lekarzem - to musi poprosic swojego lekarza
+    // ze sa jakies wskazania - i on moze dopisac lekarza komus np z okreslona specjalizacja
 }
