--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MyAccount/AdditionalComponents/ChangePasswordComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MyAccount/AdditionalComponents/ChangePasswordComponent.razor
@@ -6,22 +6,28 @@
         <strong>Podaj stare hasło: </strong>
         <MudTextField @bind-Value="@oldPassword" 
             Immediate="false" Label="Wpisz tutaj" 
-            class="form-control" 
-            >
+                        class="form-control"
+                      Variant="Variant.Text"
+                      InputType="InputType.Password">
         </MudTextField>
     </div>
     <div class="row">
         <strong>Podaj nowe hasło: </strong>
         <MudTextField @bind-Value="@newPassword"
                       Immediate="false" Label="Wpisz tutaj"
-                      class="form-control">
+                      class="form-control"
+                      Variant="Variant.Text"
+                      InputType="InputType.Password">
         </MudTextField>
     </div>
+
     <div class="row">
         <strong>Powtórz stare hasło: </strong>
         <MudTextField @bind-Value="@newPasswordAgain"
                       Immediate="false" Label="Wpisz tutaj"
-                      class="form-control">
+                      class="form-control"
+                      Variant="Variant.Text"
+                      InputType="InputType.Password">
         </MudTextField>
     </div>
     <div class="row text-center">
@@ -42,7 +48,6 @@
     private string newPasswordAgain = "";
 
     private string errorMessage = "";
-
 
     private async void HandleChangePassword()
     {
